updated home page

--- a/index.html
+++ b/index.html
@@ -38,18 +38,15 @@ Author: Justin Martin
 		</nav>
 
 		<section class="main">
-			<div class="thailand box photo-grid">
+			<div class="thailand box photo-grid title">
 				<a href="pages/thailand.html">
 					<figure>
 						<figcaption><p>THAILAND</p></figcaption>
 					</figure>
 				</a>
-				<!--BODY - TITLE STAGNANT <div class="title">
-					<p>THAILAND</p>
-				</div>-->
 			</div>
 
-			<div class="vietnam box photo-grid">
+			<div class="vietnam box photo-grid title">
 				<a href="pages/vietnam.html">
 					<figure>
 						<figcaption><p>VIETNAM</p></figcaption>
@@ -57,7 +54,7 @@ Author: Justin Martin
 				</a>
 			</div>
 
-			<div class="cambodia box photo-grid">
+			<div class="cambodia box photo-grid title">
 				<a href="pages/cambodia.html">
 					<figure>
 						<figcaption><p>CAMBODIA</p></figcaption>
@@ -65,7 +62,7 @@ Author: Justin Martin
 				</a>
 			</div>
 
-			<div class="malaysia box photo-grid">
+			<div class="malaysia box photo-grid title">
 				<a href="pages/malaysia.html">
 					<figure>
 						<figcaption><p>MALAYSIA</p></figcaption>
@@ -73,15 +70,15 @@ Author: Justin Martin
 				</a>
 			</div>
 
-			<div class="singapore box photo-grid">
+			<div class="singapore box photo-grid title">
 				<a href="pages/singapore.html">
 					<figure>
-						<figcaption><p>SINAGPORE</p></figcaption>
+						<figcaption><p>SINGAPORE</p></figcaption>
 					</figure>
 				</a>
 			</div>
 
-			<div class="indonesia box photo-grid">
+			<div class="indonesia box photo-grid title">
 				<a href="pages/indonesia.html">
 					<figure>
 						<figcaption><p>INDONESIA</p></figcaption>
