updated home grid

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@ Author: Justin Martin
 		<meta charset="utf-8">
 	    <meta name="Travel Site description" content='J&J Travel website including Thailand, Vietnam, Cambodia, Malaysia, Singapore, Indonesia. Europe coming soon.'>
 	   	<meta name='keywords' content='thailand, vietnam, cambodia, malaysia, singapore, indonesia'>
-	   	<meta name="viewport" content="width=device-width,initial-scale=1" >
+	   	<meta name="viewport" content="width=device-width"/>
 	   	<link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
+		
 		<title>2OnTheMove</title>
 	</head>
 
@@ -38,6 +39,58 @@ Author: Justin Martin
 		</nav>
 
 		<section class="main">
+			<ul class="grid columns-2">
+				<li class="photo-grid title">
+					<figure>
+						<a href="pages/thailand.html">
+							<img src="images/thailand.jpg"/>
+							<figcaption><p>THAILAND</p></figcaption>
+						</a>
+					</figure>
+				</li>
+				<li class="photo-grid title">
+					<figure>
+						<a href="pages/vietnam.html">
+							<img src="images/vietnam.jpg"/>
+							<figcaption><p>VIETNAM</p></figcaption>
+						</a>
+					</figure>
+				</li>
+				<li class="photo-grid title">
+					<figure>
+						<a href="pages/cambodia.html">
+							<img src="images/cambodia.jpg"/>
+							<figcaption><p>CAMBODIA</p></figcaption>
+						</a>
+					</figure>
+				</li>
+				<li class="photo-grid title">
+					<figure>
+						<a href="pages/malaysia.html">
+							<img src="images/malaysia.jpg"/>
+							<figcaption><p>MALAYSIA</p></figcaption>
+						</a>
+					</figure>
+				</li>
+				<li class="photo-grid title">
+					<figure>
+						<a href="pages/singapore.html">
+							<img src="images/singapore.jpg"/>
+							<figcaption><p>SINGAPORE</p></figcaption>
+						</a>
+					</figure>
+				</li>
+				<li class="photo-grid title">
+					<figure>
+						<a href="pages/indonesia.html">
+							<img src="images/indonesia.jpg"/>
+							<figcaption><p>INDONESIA</p></figcaption>
+						</a>
+					</figure>
+				</li>
+			</ul>
+
+<!-- old home page
 			<div class="thailand box photo-grid title">
 				<a href="pages/thailand.html">
 					<figure>
@@ -86,6 +139,7 @@ Author: Justin Martin
 				</a>
 			</div>
 		</section>
+-->
 
 		<footer>
 			<div>
