updated page titles

--- a/pages/vietnam.html
+++ b/pages/vietnam.html
@@ -13,7 +13,7 @@ Author: Justin Martin
 	   	<link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="../css/reset.css">
 		<link rel="stylesheet" href="../css/destination.css">
-		<title>J&J Adventures</title>
+		<title>2OnTheMove - Vietnam</title>
 	</head>
 
 	<body>
