added test photos to home

--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@ Author: Justin Martin
 						</a>
 					</figure>
 				</li>
+				<li>
+					<img src="images/indonesia.jpg" />
+				</li>
+				<li>
+					<img src="images/indonesia.jpg" />
+				</li>
 			</ul>
 
 <!-- old home page
