added test photos to home 2

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@ Author: Justin Martin
 						</a>
 					</figure>
 				</li>
+			</ul>
+			
+			<ul class="grid columns-2">
 				<li>
 					<img src="images/indonesia.jpg" />
 				</li>
