--- a/pages/thailand.html
+++ b/pages/thailand.html
@@ -9,7 +9,7 @@ Author: Justin Martin
 		<meta charset="utf-8">
 	    <meta name="Travel Site description" content='J&J Travel website including Thailand, Vietnam, Cambodia, Malaysia, Singapore, Indonesia. Europe coming soon.'>
 	   	<meta name='keywords' content='thailand, vietnam, cambodia, malaysia, singapore, indonesia'>
-	   	<meta name="viewport" content="width=device-width,initial-scale=1" >
+	   	<meta name="viewport" content="width=device-width"/>
 	   	<link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="../css/reset.css">
 		<link rel="stylesheet" href="../css/destination.css">
@@ -33,7 +33,7 @@ Author: Justin Martin
 			</ul>
 		</nav>
 
-		<section>
+		<section class="main">
 			<div class="summary">
 				<p>Photo caption for picture. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
