--- a/pages/vietnam.html
+++ b/pages/vietnam.html
@@ -35,8 +35,31 @@ Author: Justin Martin
 
 		<section class="main">
 			<div class="summary">
-				<p>Coming Soon...</p>
+				<p>Photo caption for picture. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
+
+			<h3>-Wat Traimit / The Golden Buddha-</h3>
+			<ul class="rig columns-2">	
+				<!-- WAT TRAIMIT (Golden Buddha) -->
+				<li>
+					<a href="https://farm2.staticflickr.com/1551/24864762533_e7a46d33ab_b.jpg"><img src="https://farm2.staticflickr.com/1551/24864762533_e7a46d33ab_b.jpg" width="2048" height="1368" alt="DSC03587"></a>
+					<p>Photo caption for picture 1.</p>
+				</li>
+				<li>
+					<a href="https://farm2.staticflickr.com/1687/25373028172_47d6f19dba_b.jpg"><img src="https://farm2.staticflickr.com/1687/25373028172_47d6f19dba_b.jpg" width="1024" height="684" alt="DSC03588"></a>
+					<p>Photo caption for picture 2.</p>
+				</li>
+				<li>
+					<a href="https://farm2.staticflickr.com/1612/24864377173_968a274213_b.jpg"><img src="https://farm2.staticflickr.com/1612/24864377173_968a274213_b.jpg" width="1024" height="684" alt="DSC03542"></a>
+					<p>Photo caption for picture 3.</p>
+					
+				</li>
+				<li>
+					<a href="https://farm2.staticflickr.com/1685/25195858140_ce87901bd9_b.jpg"><img src="https://farm2.staticflickr.com/1685/25195858140_ce87901bd9_b.jpg" width="1024" height="684" alt="DSC03584"></a>
+					<p>Photo caption for picture 4.</p>
+					
+				</li>
+			</ul>
 
 <!--
 			<h3>-xxxx-</h3>
