--- a/pages/vietnam.html
+++ b/pages/vietnam.html
@@ -33,7 +33,7 @@ Author: Justin Martin
 			</ul>
 		</nav>
 
-		<section class="main">
+		<section>
 			<div class="summary">
 				<p>Photo caption for picture. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
