--- a/pages/thailand.html
+++ b/pages/thailand.html
@@ -35,7 +35,7 @@ Author: Justin Martin
 
 		<section class="main">
 			<div class="summary">
-				<p>Photo caption for picture. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>Lorem ipsum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
 
 			<h3>-Wat Traimit / The Golden Buddha-</h3>
@@ -43,33 +43,33 @@ Author: Justin Martin
 				<!-- WAT TRAIMIT (Golden Buddha) -->
 				<li>
 					<a href="https://farm2.staticflickr.com/1551/24864762533_e7a46d33ab_b.jpg"><img src="https://farm2.staticflickr.com/1551/24864762533_e7a46d33ab_b.jpg" width="2048" height="1368" alt="DSC03587"></a>
-					<p>Photo caption for picture 1.</p>
+					<p>Looking up at Wat Traimit</p>
 				</li>
 				<li>
 					<a href="https://farm2.staticflickr.com/1687/25373028172_47d6f19dba_b.jpg"><img src="https://farm2.staticflickr.com/1687/25373028172_47d6f19dba_b.jpg" width="1024" height="684" alt="DSC03588"></a>
-					<p>Photo caption for picture 2.</p>
+					<p>Baby bells chime in the wind</p>
 				</li>
 				<li>
 					<a href="https://farm2.staticflickr.com/1612/24864377173_968a274213_b.jpg"><img src="https://farm2.staticflickr.com/1612/24864377173_968a274213_b.jpg" width="1024" height="684" alt="DSC03542"></a>
-					<p>Photo caption for picture 3.</p>
+					<p>Covering up before entering the temple</p>
 					
 				</li>
 				<li>
 					<a href="https://farm2.staticflickr.com/1685/25195858140_ce87901bd9_b.jpg"><img src="https://farm2.staticflickr.com/1685/25195858140_ce87901bd9_b.jpg" width="1024" height="684" alt="DSC03584"></a>
-					<p>Photo caption for picture 4.</p>
+					<p>Wat Triamit stands above the bustling city</p>
 					
 				</li>
 				<li>
 					<a href="https://farm2.staticflickr.com/1458/25195852700_6182c4c7bc_b.jpg"><img src="https://farm2.staticflickr.com/1458/25195852700_6182c4c7bc_b.jpg" width="1024" height="684" alt="DSC03583"></a>
-					<p>Photo caption for picture 4.</p>
+					<p>The town below</p>
 				</li>
 				<li>
 					<a href="https://farm2.staticflickr.com/1485/25195908610_e66f52bf26_b.jpg"><img src="https://farm2.staticflickr.com/1485/25195908610_e66f52bf26_b.jpg" width="1024" height="684" alt="DSC03579"></a>
-					<p>Photo caption for picture 4.</p>
+					<p>Wat Triamit close up</p>
 				</li>
 				<li>
 					<a href="https://farm2.staticflickr.com/1497/25398556801_029eebc2e3_b.jpg"><img src="https://farm2.staticflickr.com/1497/25398556801_029eebc2e3_b.jpg" width="1024" height="684" alt="DSC03572"></a>
-					<p>Photo caption for picture.</p>
+					<p>Justin outside the Golden Buddha entrance</p>
 				</li>
 				<li>
 						<a href="https://farm2.staticflickr.com/1526/25195756260_75b908c8ca_b.jpg"><img src="https://farm2.staticflickr.com/1526/25195756260_75b908c8ca_b.jpg" width="1024" height="684" alt="DSC03570"></a>
